--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
     
    
          <!-- footer -->
-      <footer class="page-footer red">
+      <footer class="page-footer yellow">
         <div class="footer-copyright">
           <div class="container">
             <p6> © 2020 Copyright </p6>
